20000513-13:51 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   - source/rtl/stringsx.c
     - removed
   + source/rtl/teditorl.c
     + added
   * source/rtl/Makefile
   * Makefile.bc
   * Makefile.vc
     * changed to reflect previous changes

20000513-00:51 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * Makefile.bc
     + added stringsx.c
   * Makefile.vc
     + added stringsx.c
   * source/rtl/Makefile
     ! fixed tab chars in file (I hope)

20000513-00:19 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/stringsx.c
     * Changed StrToken() to __StrToken()
     - removed unused functions
     + added standard copyright, please note that __StrToken() is NOT my work.
   * source/rtl/teditor.prg
     * StrToken() now is __StrToken()
   * ChangeLog, now saved as unix file, only cr at end of line, forced my editor to save all files
     as unix files regardless of their actual state.

20000512-08:00 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

  * source/compiler/harbour.y
    + Added support for END to be used with FOR loops.

   * include/hberrors.h
     + Added : #define HB_COMP_WARN_CLASS_NOT_FOUND

   * source/compiler/hbgenerr.c
     + Added: 3Class \'%s\' not known in declaration of variable \'%s\'"

   * source/compiler/harbour.c
     - Remmmed a "debug" printf()
     + Added warning when class not know when declaring an object FROM Class ...

20000512-13:31 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   + source/rtl/stringsx.c
     + added to rtl since teditor.prg needs StrToken()
   * source/rtl/Makefile
     + added stringsx.c to list of needed files
   * source/rtl/teditor.prg
     % Text2Array() is twice as fast and uses A LOT less memory.

20000510-22:01 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/vm/fm.c
     + Added OS/2 support to Memory() function
   * source/compiler/harbour.c
     ! fixed hb_compFunctionNew() define conflicting with actual implementation
